2013.09.27 - version 3.0.0-Experimental
	* Nested SASS
	* Updated Sidebars 

2013.09.20 - version 3.0.0-Experimental
	* Schema.org microdata markup
	* Continued CSS styling
	* Moved all colors out in favor for SASS variables
	* Hooked up footer widgets
2013.09.13 - version 3.0.0-Experimental
	* Initial push
2013.07.17 - version 2.7.3
	* Fixed: Eliminated erroneous function call from the SB Social widget
	* Removed: front-page.php, reintroduced custom front-page hooks via hooks.php

2013.06.14 - version 2.7.2
	* Added: New filters for controling SB's post image functions
	* Added: New filters for featured content widget output
	* Updated: Removed startbox.js hard dependency on colorbox.js
	* Fixed: Prevent non-sidebar posts from using the 'custom-sidebar' slug
	* Fixed: Corrected the custom sidebar query so it checks ALL sidebars when selecting a replacement
	* Fixed: Allow for "All {post_type}" selections to work for sidebars
	* Fixed: Stop featured content widget from showing "..." if post has no content
	* Fixed: A number of minor issues that caused an inane amount of PHP warnings

2013.04.01 - version 2.7.1
	* Fixed: Repaired a missing file include for SB Slideshows
	* Fixed: Repaired a hidden issue with custom sidebars not appearing in some instances

2013.03.29 - version 2.7
	* Added: Language support for British English, German, French, Italian, Spanish, Russian, Brazilian Portuguese, and Japanese
	* Added: Filter ‘sb_register_sidebar_defaults’ to allow easy override of default sidebar markup
	* Added: sb_image_crop_dimensions() for properly determining the crop coordinates for any image
	* Fixed: Multiple custom sidebars can now appear on a single page (e.g. replacing both Primary and Footer Aside 1 is possible).
	* Fixed: Author template now properly displays entire author archive.
	* Fixed: Replaced post content pagination to loop.php and single.php.
	* Fixed: Default settings for post thumbnails in theme options.