@@ -1,5 +1,6 @@
 /* Containers
 --------------------------------------------- */
+
 .site-header {
 	background-color: $color-bg-header;
 }
