@@ -1,5 +1,6 @@
 /* Content
 --------------------------------------------- */
+
 .site-inner {
 	@include rem(padding-top, 48px);
 }
