@@ -1,3 +1,5 @@
+/* Footer
+--------------------------------------------- */
 .site-footer {
 	clear: both;
 	background-color: $color-bg-footer;
