@@ -8,6 +8,7 @@
 
 .site-title {
 	float: left;
+	font-family: $site-title-font;
 	@include rem(font-size, 48px);
 	line-height: 1.3;
 	margin: 0;
@@ -22,5 +23,7 @@
 
 .site-description {
 	color: $color-site-description;
+	font-family: $site-description-font;
+	font-weight: 300;
 	@include rem(font-size, 12px);
 }
