@@ -1,14 +1,5 @@
-
 /* Responsive
 --------------------------------------------- */
-@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
-	only screen and (-moz-min-device-pixel-ratio: 1.5),
-	only screen and (-o-min-device-pixel-ratio: 3/2),
-	only screen and (min-device-pixel-ratio: 1.5) {
-
-}
-
-@media only screen and (max-width: 1139px) { }
 
 @media only screen and (max-width: 1023px) { 
 
