@@ -11,7 +11,7 @@ body {
 	font-family: $font-sans;
 	@include rem(font-size, 16px);
 	font-weight: 300;
-	line-height: $line-height;
+	line-height: 1.625;
 }
 
 p {
@@ -132,6 +132,7 @@ h5,
 h6 {
 	clear: both;
 	color: $color-headlines-primary;
+	font-family: $headline-font;
 	font-weight: 700;
 	line-height: 1.2;
 	margin: 0;
