@@ -1,5 +1,6 @@
 /* Sidebar Widgets
 --------------------------------------------- */
+
 .sidebar {
 	.widget {
 		background-color: $color-bg-widgets;
