@@ -1,10 +1,10 @@
 # Require any additional compass plugins here.
 
-http_path = "/"
-css_dir = "/"
-sass_dir = "/sass"
-images_dir = "/images"
-javascripts_dir = "/js"
+http_path = "../"
+css_dir = "../"
+sass_dir = "/"
+images_dir = "../images"
+javascripts_dir = "../js"
 
 # You can select your preferred output style here (can be overridden via the command line):
 # output_style = :expanded or :nested or :compact or :compressed
