@@ -74,7 +74,7 @@ Structure and Layout
 /*
 Header
 ------------------------------------------------------------------------- */
-@import "branding";
+@import "header";
 @import "header-widget-area";
 
 
