@@ -309,7 +309,7 @@ html {
 }
 
 body {
-  background-color: #eeeeee;
+  background-color: white;
   color: black;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -445,6 +445,7 @@ h5,
 h6 {
   clear: both;
   color: #222222;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   line-height: 1.2;
   margin: 0;
@@ -902,6 +903,7 @@ Header
 
 .site-title {
   float: left;
+  font-family: Georgia, Cambria, "Times New Roman", Times, serif;
   font-size: 48px;
   font-size: 4.8rem;
   line-height: 1.3;
@@ -917,6 +919,8 @@ Header
 
 .site-description {
   color: #888888;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
   font-size: 12px;
   font-size: 1.2rem;
 }
@@ -1216,6 +1220,8 @@ Sidebar Widgets
 /*
 Footer
 ------------------------------------------------------------------------- */
+/* Footer
+--------------------------------------------- */
 .site-footer {
   clear: both;
   background-color: #222222;
